# ANILA

./: .env.example  .gitignore  ANILA.code-workspace  CHANGELOG.md  LICENSE  README.md  README.zh-TW.md  anila_plan.md  docker-compose-dev.yml  docker-compose.yml  frontend_plan.md  pyproject.toml
AgenticRAG/: .env.example  .gitignore  Dockerfile  README.md  anila-agent.yaml  api.py  docker-compose.yml  e2e_smoke.py  index_documents.py  plan.md  pyproject.toml
AgenticRAG/_archive/phase4_pre_rewrite/: README.md
AgenticRAG/docker/: entrypoint.sh
AgenticRAG/docs/: BOOTSTRAP_DEPLOYMENT.md  CSP_INTEGRATION.md  SERVER_DEPLOYMENT_PHASE4.md
AgenticRAG/docs/deploy/: anila.md
AgenticRAG/docs/examples/: api.md  memory.md  prompt.md  tools.md
AgenticRAG/src/agentic_rag/: __init__.py  app_factory.py  config.py
AgenticRAG/src/anila_core/: config.py
AgenticRAG/templates/institutional-agentic-rag/: README.md  model-roles.example.yaml
AgenticRAG/tests/: __init__.py  conftest.py  test_agentic_chat.py  test_api_helpers.py  test_chunker.py  test_chunker_cjk.py  test_citation_and_vision.py  test_citation_guardrail.py  test_cli_register.py  test_cli_status.py  test_compact.py  test_coordinator.py  test_dispatch_tool.py  test_docling_parser.py  test_embedding_mock.py  test_engine.py  test_extraction_state.py  test_ingestion_service.py  test_memory.py  test_no_anila_core_dep.py  test_normalize.py  test_ocr_fallback.py  test_parsers.py  test_personalization.py  test_rag_preprocessor.py  test_rag_tools.py  test_rag_tools_v2.py  test_registry.py  test_relevance_selector_impl.py  test_remediation.py  test_reranker.py  test_router.py  test_runtime_provider_adapter.py  test_runtime_rag_actions.py  test_sliding_window.py  test_tokenize_zh.py  test_trigger_compaction.py  test_user_memory.py
anila-agent-framework/: .gitignore  README.md  pyproject.toml
anila-agent-framework/src/anila_agent/: __init__.py  exceptions.py
anila-agent-framework/tests/: test_smoke.py
anila-core/: CHANGELOG.md  README.md  e2e_smoke.py  pyproject.toml
anila-core/examples/router-mode/: main.py
anila-core/examples/simple-agent/: agent.py
anila-core/src/anila_core/: __init__.py  app_factory.py  config.py
anila-core/tests/: __init__.py  test_agent_as_tool.py  test_agent_scoped_pgvector_store.py  test_agentic_chat.py  test_apply_patch.py  test_approvals.py  test_caller_context.py  test_chunker.py  test_chunking_plugins.py  test_cli_init.py  test_collection_scoped_pgvector_store.py  test_compact.py  test_coordinator.py  test_dispatch_stateful.py  test_e2e_ask_user_resume.py  test_engine.py  test_engine_interrupt.py  test_file_tools.py  test_g3_retrieval_path_uniqueness.py  test_handoff.py  test_ingestion_errors.py  test_lifecycle_hooks.py  test_memory_user_http_client.py  test_memory_user_layer.py  test_prompt_suggestion.py  test_rag_preprocessor.py  test_rotating_middleware.py  test_router_classified.py  test_router_multi_turn.py  test_router_resume_proxy.py  test_router_runtime_contract.py  test_router_session.py  test_router_sse_passthrough.py  test_router_streaming_multi_turn.py  test_runtime_config.py  test_server_interrupt_flow.py  test_session_memory.py  test_session_owner.py  test_session_sqlite.py  test_shell_tools.py  (+7 more)
anila-core/tests/integration/: conftest.py  test_g1_agent_isolation.py  test_g1_collection_isolation.py  test_g2_rls_bypass.py
ingestion-worker/: Dockerfile  pyproject.toml
ingestion-worker/src/ingestion_worker/: __init__.py  embedder.py  evaluator.py  handlers.py  judge.py  main.py  parsers.py  settings.py
ingestion-worker/tests/: test_uniform_color.py
models/flux2-dev/: Dockerfile  pyproject.toml  requirements.txt  server.py
models/flux2-dev-agent/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
models/flux2-dev-agent/app/: chat_handler.py  flux_client.py  image_store.py  main.py  prompt_translator.py  schemas.py
models/flux2-dev-agent/tests/: test_chat_handler.py  test_flux_client.py  test_image_store.py  test_main.py  test_prompt_translator.py  test_schemas.py
models/flux2-dev/tests/: conftest.py  test_server.py
onyx/: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .secretsignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ct.yaml  cubic.yaml  docker-bake.hcl  pyproject.toml
onyx/.devcontainer/: Dockerfile  README.md  devcontainer.json  init-dev-user.sh  init-firewall.sh  zshrc
onyx/.github/: CODEOWNERS  actionlint.yml  dependabot.yml  pull_request_template.md  runs-on.yml
onyx/.github/workflows/: deployment.yml  docker-tag-beta.yml  docker-tag-latest.yml  helm-chart-releases.yml  merge-group.yml  nightly-close-stale-issues.yml  nightly-llm-provider-chat.yml  post-merge-beta-cherry-pick.yml  pr-database-tests.yml  pr-desktop-build.yml  pr-external-dependency-unit-tests.yml  pr-golang-tests.yml  pr-helm-chart-testing.yml  pr-integration-tests.yml  pr-jest-tests.yml  pr-labeler.yml  pr-linear-check.yml  pr-playwright-tests.yml  pr-python-checks.yml  pr-python-connector-tests.yml  pr-python-model-tests.yml  pr-python-tests.yml  pr-quality-checks.yml  preview.yml  (+8 more)
onyx/.greptile/: config.json  files.json  rules.md
onyx/backend/: .dockerignore  .gitignore  .trivyignore  Dockerfile  Dockerfile.model_server  alembic.ini  pytest.ini  supervisord.conf
onyx/cli/: .gitignore  Dockerfile  README.md  go.mod  go.sum  hatch_build.py  main.go  pyproject.toml
onyx/contributor_ip_assignment/: EE_Contributor_IP_Assignment_Agreement.md
onyx/deployment/: README.md
onyx/desktop/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
onyx/docs/: METRICS.md
onyx/profiling/: README.md  docker-compose.yml  prometheus.yml
onyx/web/: .dockerignore  .eslintrc.json  .gitignore  AGENTS.md  Dockerfile  README.md  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  tsconfig.types.json
onyx/widget/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+4507 files in other folders)
