[project]
name = "anila-agent"
version = "0.2.1"
description = "Agentic RAG starter built on openai-agents with a Claude-Code-inspired harness"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ANILA" }]
dependencies = [
    "openai-agents[litellm]>=0.3.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# Wire the built-in RAG tools to a pgvector collection. Activated automatically
# when PGVECTOR_URL + PGVECTOR_COLLECTION env vars are set; otherwise unused.
# langchain-postgres pre-1.0 may break across minor versions — pinned tightly.
pgvector = [
    "langchain-postgres>=0.0.15,<0.1",
    "langchain-openai>=1.0,<2",
    "psycopg[binary]>=3.1,<4",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
anila = "anila_agent.main:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anila_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
