[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anila-core"
version = "0.1.0"
description = "ANILA Core - Python agent runtime"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "sse-starlette>=2.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
rag = [
    # Phase 1 - Document parsing
    "pymupdf4llm>=0.0.10",
    "python-docx>=1.1",
    "odfpy>=1.4",
    # Phase 2 - Embedding & Vector store
    "asyncpg>=0.29",
    "pgvector>=0.3",
    # Phase 5 - File upload API
    "python-multipart>=0.0.9",
    # Phase 6 - Settings from env
    "pydantic-settings>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anila_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
