[project]
name = "anila-rag-sample"
version = "0.1.0"
description = "ANILA RAG sample agent — OpenAI-compatible, pgvector + Hybrid Search"
requires-python = ">=3.11"
dependencies = [
    # Runtime foundation
    "anila-core",
    # RAG-specific runtime deps
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    # Document parsing (for index_documents.py)
    "pymupdf4llm>=0.0.10",
    "python-docx>=1.1",
    "odfpy>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
anila-core = { path = "../anila-core", editable = true }
