[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-rag"
version = "0.3.1"
description = "AgenticRAG Framework - framework-free building blocks for Agentic RAG (no LangChain / LangGraph)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "anyio>=4.0",
    # Agent runtime primitives (agentic_rag.runtime.framework) need
    # typing-extensions for Protocol / runtime_checkable / TypeAlias
    # cushion across supported Python versions.
    "typing-extensions>=4.12",
    "sse-starlette>=2.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
rag = [
    # Document parsing
    "pymupdf4llm>=0.0.10",
    "pymupdf>=1.24",          # embedded image extraction from PDFs
    "python-docx>=1.1",
    "odfpy>=1.4",
    "striprtf>=0.0.26",       # RTF parser
    "Pillow>=10.0",           # image loading for vision pipeline
    # Embedding & Vector store
    "asyncpg>=0.29",
    "pgvector>=0.3",
    # File upload API
    "python-multipart>=0.0.9",
    # Settings from env
    "pydantic-settings>=2.0",
]
openai = [
    # Optional: enables agentic_rag.runtime.framework.providers.openai_compat.
    # AgenticRAG's default agentic-chat path uses the bridge adapter over
    # the existing stream-based Provider, so this extra is only needed by
    # forks that want to drive the framework Runner directly against an
    # OpenAI-compat HTTP endpoint (vLLM / NIM / TGI / Ollama / OpenAI).
    "openai>=1.0",
]
mcp = [
    # Optional: enables agentic_rag.runtime.framework.mcp.* — connect to
    # third-party MCP servers (filesystem, github, sentry, postgres, custom
    # ops scripts) over stdio. The framework consumes MCP servers as a
    # client; we don't host an MCP server. Install only if your fork
    # plans to wire external MCP tooling into agents.
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    # respx mocks httpx requests at the transport layer, used by
    # tests for the user_memory client (route-3 cross-tenant flow).
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.9",
]
zh = [
    # Optional Traditional Chinese word segmenter (Academia Sinica, Taiwan).
    # Pure-stdlib bigram tokenizer is the default; install this to switch
    # via RAG_TOKENIZER=ckip. Pulls in PyTorch + transformers (~2 GB).
    "ckip-transformers>=0.3",
]
docling = [
    # IBM Docling layout-aware parser (Apache-2, US). Set DOC_PARSER=docling
    # to route PDF/DOCX/PPTX/XLSX/HTML through it. First run downloads
    # ~1 GB of layout + EasyOCR weights; enabling Granite picture
    # description (DOCLING_PICTURE_DESCRIPTION=true) adds ~3 GB more.
    "docling>=2.0",
    "easyocr>=1.7",  # Docling's default OCR engine
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
