[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anila-agent-framework"
version = "0.1.0a1"
description = "Provider-agnostic agent runtime — Action / Middleware / StateMachine / Memory / Provider primitives. Synthesized from openai-agents-python (MIT) and claude-code patterns; not a verbatim port."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "ANILA team" }]
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.12",
    "anyio>=4.0",
]

[project.optional-dependencies]
openai = [
    # Optional: use the OpenAI Chat Completions provider.
    # The framework itself does NOT import openai; install this extra
    # only if you want the bundled OpenAI-compatible provider (which
    # also covers vLLM / NIM / TGI / Ollama as drop-ins).
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anila_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
