[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anila-core"
version = "0.5.0"
description = "ANILA Core — Python agent runtime foundation (chat / agent / memory / dispatch)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    # pydantic-settings was previously gated behind [rag] extras. Sprint 1
    # cleanup (CHANGELOG v0.5.0) makes it a core dep so router-mode env
    # loading works without extras.
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "sse-starlette>=2.0",
    "aiofiles>=23.0",
    # Phase 2 Sprint 1 (v0.6.0): the ingestion platform's central
    # AgentScopedPgVectorStore lives here, so asyncpg/pgvector are back
    # as core deps. v0.5.0 removed them when RAG-flavour code moved out;
    # the new ingestion platform makes pgvector an anila-core concern again.
    "asyncpg>=0.29",
    "pgvector>=0.3",
]

# v0.5.0 BREAKING — `[rag]` extras removed. The packages it pulled
# (pymupdf4llm, python-docx, odfpy, asyncpg, pgvector, python-multipart)
# are RAG-specific and now live in AgenticRAG/pyproject.toml. Forks that
# want the full ingestion stack should `pip install -e ./AgenticRAG`,
# not anila-core.
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.9",
    "pyyaml>=6.0",
]

[project.scripts]
anila-core = "anila_core.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anila_core"]

[tool.hatch.build.targets.wheel.shared-data]
"src/anila_core/cli/templates" = "anila_core/cli/templates"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
