[project]
name = "flux2-dev"
version = "0.1.0"
requires-python = ">=3.11"
# Note: torch/diffusers are NOT in test deps — tests inject a mocked pipeline
# so we never have to install the GPU stack on the dev box.
dependencies = [
    "fastapi==0.115.5",
    "pydantic==2.9.2",
    "Pillow",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
    "httpx==0.27.2",  # for fastapi TestClient
]

[tool.pytest.ini_options]
pythonpath = ["."]
